fixed page header overlapping w/ page body on modal. Updated readme.

--- a/public/styles.css
+++ b/public/styles.css
@@ -25,7 +25,7 @@ header {
   text-align: center;
   position: absolute;
   width: 100%;
-  top: 40%;
+  top: 1%; /* prevents title from overlapping w/ body */
 }
 
 .page-title-container {
@@ -135,3 +135,4 @@ a.btn-anchor {
   color: salmon;
   text-decoration: none;
 }
+
